[tool.poetry]
name = "photo-utilities"
version = "0.1.0"
description = ""
authors = ["Giuseppe Martino <martinogiuseppe@gmail.com>"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "photo_utilities"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
exclude = '''
(
/(
\.git
| \.venv
)/
)
'''

[tool.isort]
skip = [".tox", ".venv", ".git", "pys"]
known_frameworks = []
profile = "black"
atomic = true
sections = ["FUTURE", "STDLIB", "MOCK", "FRAMEWORKS", "THIRDPARTY", "FIRSTPARTY", "TESTS", "LOCALFOLDER"]
known_third_party = []
